--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "formatstring",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "C# style string.Format()",
   "main": "index.js",
   "scripts": {
   },
   "author": "",
-  "license": "ISC"
+  "license": "X.Net"
 }
